# tonto

./: .ctags  .gitignore  .gitmodules  .travis.yml  .vimrc  CMakeLists  CMakeLists.txt  CNAME  README.md  _config.yml  about.md  install-all-you-need.sh  install-all.sh  travis.yml
tests/: CMakeLists.txt  run_test.in
tests/Ar_atom_gchf_DKH/: Ar.orbital_1_density_grid,gnuplot  stderr  stdin  stdout
tests/Ar_atom_gchf_IOTC/: Ar.negative_laplacian_grid,gnuplot  cc-pVTZ-unc  stdin  stdout
tests/Ar_atom_rhf_DKH/: stdout
tests/Ar_atom_rhf_IOTC/: stdin  stdout
tests/BH_GSCF_electric_dipole/: stdout
tests/Fermium99+_DKHx_benchmark/: IO  stderr  stdout
tests/HCl_picture_change_effect_at_nucleus/: HCl.electron_density_grid,gnuplot  stdin  stdout
tests/cn-hcn_dimer_rhf_cc-pVDZ_various_E_decompositions/: IO  stdout
tests/cocl4--_gchf_TZP_B_L_field_plot/: CoCl4.B_L_field.y,gnuplot  CoCl4.B_S_field.magnitude,gnuplot  CoCl4.B_S_field.z,gnuplot  CoCl4.B_field.x,gnuplot  CoCl4.B_field.y,gnuplot  stdout
tests/cx/: CMakeLists.txt
tests/cx/1st_row_transition_metal_surface/: mo7c.cif  mo7c_mo7c.cxs  stdin  stdout
tests/cx/2nd_row_transition_metal_surface/: mo7c.cif  mo7c_mo7c.cxs  stdin  stdout
tests/cx/3rd_row_transition_metal_surface/: IO  mo7c.cif  mo7c_mo7c.cxs  stdin  stdout
tests/cx/actinide_surface/: mo7c.cif  mo7c_mo7c.cxs  stdin  stdout
tests/cx/benzene_surface/: herringbone_PAHs_BENZEN07.cxs  stdin  stdout
tests/cx/benzene_surface_low_resolution/: IO  herringbone_PAHs.cif  herringbone_PAHs_BENZEN07.cxs  stdin  stdout
tests/cx/benzene_surface_sbf/: herringbone_PAHs_BENZEN07.sbf  stdin  stdout
tests/cx/benzene_surface_veryhigh_resolution/: IO  stdin  stdout
tests/cx/cigar_shaped_surface/: IO  stdin  stdout
tests/cx/disordered_surface/: IO  stdin  stdout
tests/cx/ethanol_breakdown/: C2H6O.density_matrix,restricted  C2H6O.molecular_orbitals,restricted  C2H6O.orbital_energies,restricted  stdin  stdout
tests/cx/ethanol_deformation_density_surfaces/: ETANOL.cif  ETANOL_CSD_CIF_ETANOL.FChk  ETANOL_CSD_CIF_ETANOL.cxs  IO  stdin  stdout
tests/cx/ethanol_formamide_breakdown/: 1_ETANOL_CSD_CIF_ETANOL.FChk  C2H6O.SCF_density_matrix,restricted  C2H6O.molecular_orbitals,restricted  C2H6O.orbital_energies,restricted  ETANOL_CSD_CIF_ETANOL.FChk  FORMAM02_CSD_CIF_FORMAM02.density_matrix,restricted  FORMAM02_CSD_CIF_FORMAM02.sbf  IO  stderr  stdin  stdout  stdout.csv
tests/cx/formamide_breakdown/: stdin  (+8 more)
tests/geminal/: CMakeLists.txt
tests/h2co_rhf_6-31-G_star_Roby_bond_indices/: stdout
tests/h2o+_gchf_1e_properties/: IO  basis-udz  h2o.ku_spin_density_grid,gnuplot  h2o.nc_spin_density_grid,gnuplot  h2o.spin_density_grid,gnuplot  stdin  stdout
tests/h2o+_uhf_cc-pVDZ_1e_properties/: stdin  stdout
tests/h2o+_uhf_cc-pVDZ_core_hamiltonian_initial_guess/: stdout
tests/h2o+_uxalpha_cc-pVDZ_promolecule_guess/: stdout
tests/h2o_blyp_cc-pVDZ/: stdin  stdout
tests/h2o_mp2_6-31G(d)/: stdout
tests/h2o_rhf_6-311G(d,p)/: stdout
tests/h2o_rhf_6-31G(d)/: stdout
tests/h2o_rhf_6-31G(d)_normal_mode_analysis/: stdin  stdout
tests/h2o_rhf_DZP/: stdout
tests/h2o_rhf_STO-3G/: stdout
tests/h2o_rhf_aug-cc-pVDZ/: stdout
tests/h2o_rhf_cc-pVDZ/: stdout
tests/h2o_rhf_cc-pVDZ_1e_properties/: stdout
tests/h2o_rhf_cc-pVDZ_E_field_and_1e_properties/: stdout
tests/h2o_rhf_cc-pVDZ_dimer_rotation_and_E_decomposition/: stdout
tests/h2o_rhf_cc-pVDZ_dipole_polarisabilities/: stdin  stdout
tests/h2o_rhf_cc-pVDZ_electric_polarisation_density_plot/: IO  stdin  stdout
tests/h2o_rhf_cc-pVDZ_electrostatic_potential_plot/: stdout
tests/h2o_rhf_cc-pVDZ_make_localised_MOs/: stdout
tests/h2o_rhf_cc-pVDZ_mulliken_populations/: stdout
tests/h2o_rhf_cc-pVDZ_using_disk_integrals/: stdin  stdout
tests/h2o_rhf_cc-pVTZ_spherical_harmonic_basis/: stdout
tests/h2o_rks_BVWN5_cc-pVDZ/: stdin  stdout
tests/h2o_xalpha_cc-pVDZ/: stdout
tests/hexagonal_H6_GMFCI/: IO  readin_mos  stdout
tests/linear_H6_GMFCI_with_truncation_scheme/: readin_geminal_1  readin_geminal_3  readin_mos  stdout
tests/long/: CMakeLists.txt
tests/maps_L-Alanine_23K/: IO  L-Alanine_23K  L-Alanine_23K.molecular_orbitals,restricted  basis_sets  skrypt  stderr  stdin  stdout  tonto_serial
tests/nh2cn_b3lyp_cc-pVTZ_g94_fchk_to_SF_stl_limit/: stdin  stdout
tests/nh2cn_b3lyp_cc-pVTZ_g94_fchk_to_structure_factor_range/: stdin  stdout
tests/nh2cn_b3lyp_cc-pVTZ_g94_fchk_to_structure_factors/: stdin  stdout
tests/nh2cn_b3lyp_cc-pVTZ_read_g94_fchk_file/: stdin  stdout
tests/nh3_rhf-consistent-cluster-charge_DZP_hirshfeld_atom_refinement/: IO  stdin  stdout
tests/nh3_rhf_DZP_cluster-charges/: stdout
tests/nh3_rhf_DZP_consistent-cluster-charges/: stdout
tests/nh3_rhf_DZP_hirshfeld_atom_fit_and_structure_factors/: stdin  stdout
tests/nh3_x-ray-constrained-rhf-cluster-charge_cc-pVTZ/: stderr  stdin  stdout
tests/nh3_x-ray-constrained-rhf-cluster-charge_cc-pVTZ_restart/: basis_sets  stdin  stdout  tonto
tests/nh3_x-ray-constrained-rhf_cc-pVTZ/: IO  stdin  stdout
tests/nhfcl_rhf_DZP_unit_cell_refractive_indices/: stdin  stdout
tests/oxygen_atom_uhf_cc-pVDZ/: stdin  stdout
tests/relativistic/: CMakeLists.txt
tests/short/: CMakeLists.txt  README
tests/so2_read_anharmonic_GC_cif/: stdout
tests/so2_read_anharmonic_U_cif/: stdout
tests/so2_read_anharmonic_cif/: IO  so2.molecule.cif  stdin  stdout
tests/so2_rhf_DZP_anharmonic_cluster_charge_XWR/: molecule.cif  stdin  stdout
tests/so2_rhf_DZP_consistent-cluster-charge_anharmonic_HA_refinement/: IO  so2.cartn-fragment.cif  so2.cryst-asymm-unit.cif  so2.cryst-fragment.cif  stdin  stdout
tests/urea-urea_mp2_6-31G(d,p)_pair_energy/: stdout  urea_mp2.fchk
tests/urea_read_and_process_CIF/: stdout  urea.cxc
tests/urea_read_cif_and_make_Hirshfeld_surface/: stdin  stdout
tests/urea_rhf_DZP_consistent-cluster-charge_hirshfeld_atom_fit/: stdout
tests/urea_rhf_DZP_fast_n_sleazy/: stdout
tests/urea_rhf_STO-3G_hirshfeld_atom_properties/: stdout
tests/urea_x-ray-constrained-uhf_STO-3G_plus_ELF_plot/: stdout  urea.ELF_grid,gnuplot
(+1024 files in other folders)
